# castor-old

./: .gitignore  LICENSE  README.md
Fundamentos de Computação Gráfica/: CMakeLists.txt
Fundamentos de Computação Gráfica/LAB2/: launch.json  tasks.json
c/: README.md  c.code-workspace
c/codes/: say-hello.c
c/exemplos/args/: main.c
c/exemplos/headers/: main.c  speak.c  speak.h
c/exemplos/hello/: hello-world.c  say-hello.h
c/exemplos/hello-world/: main.c
c/exemplos/teclado/: main.c  teclado.c
cpp/: README.md  c.code-workspace
cpp/codes/: hello-world.cpp
cpp/exemplos/args/: main.cpp
cpp/exemplos/headers/: main.cpp  speak.cpp  speak.hpp
cpp/exemplos/hello/: say-hello.cpp  say-hello.hpp
cpp/exemplos/hello-world/: main.cpp
cpp/exemplos/teclado/: main.cpp  teclado.cpp
java/: README.md  java.code-workspace
java/src/exemplos/args/: Argumentos.java
java/src/exemplos/helloWorld/: Hello.java
java/src/exemplos/imports/: Main.java
java/src/exemplos/imports/modulo/: Fib.java
java/src/exemplos/teclado/: Teclado.java
java/src/exemplos/testes/: Calculadora.java  CalculadoraTeste.java
python/: README.md  python.code-workspace
python/exemplos/args/: argumentos.py
python/exemplos/import/: fib.py  main.py
python/exemplos/teclado/: teclado.py
